--- a/internal/views/game.templ
+++ b/internal/views/game.templ
@@ -8,7 +8,7 @@ templ Game(game *connectfour.Game) {
     @Root() {
         @SettingsIcon()
         <div id="game-container" class="flex flex-col justify-center items-center min-h-screen">
-            <h1 class="text-2xl md:text-3xl lg:text-5xl font-bold text-center mb-8">Connect 4</h1>
+            <h1 class="text-2xl md:text-3xl lg:text-5xl font-bold text-white text-center mb-8">CONNECT 4</h1>
             <div class="w-full max-w-7xl grid grid-cols-1 lg:grid-cols-3 gap-8 items-start">
                 <div class="hidden lg:block"></div>
                 <div id="board-container" class="flex justify-center items-center">
@@ -19,6 +19,5 @@ templ Game(game *connectfour.Game) {
                 </div>
             </div>
         </div>
-        @SettingsModal(game)
     }
 }
