--- a/internal/views/settings.templ
+++ b/internal/views/settings.templ
@@ -7,27 +7,39 @@ import (
 
 templ SettingsIcon() {
     <div class="absolute top-4 right-4">
-        <label for="settings-modal" class="btn btn-ghost btn-circle">
+        <button class="btn btn-ghost btn-circle text-zinc-200"
+            hx-get="/settings"
+            hx-target="#root">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
             </svg>
-        </label>
+        </button>
     </div>
 }
 
 templ SettingsModal(game *connectfour.Game) {
-    <input type="checkbox" id="settings-modal" class="modal-toggle"/>
-    <div class="modal">
-        <div id="settings" class="modal-box">
-            <h3 class="font-bold text-lg mb-4">Settings</h3>
-            for _, player := range game.Players {
-                if bot, ok := player.(*connectfour.BotPlayer); ok {
-                    @minimaxBotControls(bot)
+    <div id="modal-container">
+        <div class="modal modal-open">
+            <div class="modal-backdrop"
+                hx-trigger="click"
+                hx-target="#root"
+                hx-get="/game"
+            ></div>
+            <div id="settings" class="modal-box border border-zinc-800 shadow-lg bg-transparent backdrop-blur-lg">
+                <h3 class="font-bold text-lg mb-4">Settings</h3>
+                for _, player := range game.Players {
+                    if bot, ok := player.(*connectfour.BotPlayer); ok {
+                        @minimaxBotControls(bot)
+                    }
                 }
-            }
-            <div class="modal-action">
-                <label for="settings-modal" class="btn">Close</label>
+                <div class="modal-action mt-4">
+                    <button class="btn"
+                        hx-trigger="click"
+                        hx-target="#root"
+                        hx-get="/game">Close
+                    </button>
+                </div>
             </div>
         </div>
     </div>
@@ -35,7 +47,7 @@ templ SettingsModal(game *connectfour.Game) {
 
 templ minimaxBotControls(bot *connectfour.BotPlayer) {
     <div class="form-control mb-4">
-        <label class="label">
+        <label class="label" for={ fmt.Sprintf("difficulty-slider-%s", bot.ID()) }>
             <span class="label-text font-semibold">Bot Intelligence</span>
             <span class="label-text-alt font-semibold">{ bot.Name() }</span>
         </label>
@@ -44,11 +56,12 @@ templ minimaxBotControls(bot *connectfour.BotPlayer) {
             min="1"
             max="10"
             value={ fmt.Sprintf("%d", bot.Difficulty) }
-            class="range range-primary"
+            class="themed-slider"
             hx-post="/game/difficulty"
             hx-trigger="change"
             hx-vals={ fmt.Sprintf(`{"id": "%s"}`, bot.ID()) }
             name="difficulty"
+            id={ fmt.Sprintf("difficulty-slider-%s", bot.ID()) }
         />
         <div class="w-full flex justify-between text-xs px-2 mt-2">
             <span>Novice</span>
@@ -56,5 +69,7 @@ templ minimaxBotControls(bot *connectfour.BotPlayer) {
             <span>Expert</span>
         </div>
     </div>
-    <p class="text-sm text-warning mt-4">Note: Bot calculations may be slow at higher intelligence levels</p>
+    <p class="text-sm text-warning mt-4">
+        Warning: Bot calculations may be slow at higher intelligence levels
+    </p>
 }
